umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_ash4+.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_ions
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: "D{?"
    atoms:
      - "As#c+#v4"
      - "H#v"
      - "H#v"
      - "H#v"
      - "H#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: "D{?"
    atoms:
      - "As#c+#v4"
      - "H#v"
      - "H#v"
      - "H#v"
      - "H#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
