umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_bcl4-.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "B#c-#v4" "1" "Cl#n3#v" "2" "Cl#n3#v" "3" "Cl#n3#v" "4" "Cl#n3#v"} :bonds [["0" "1" "1"] ["0" "2" "1"] ["0" "3" "1"] ["0" "4" "1"]] :charge -1 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "B#c-#v4" "1" "Cl#n3#v" "2" "Cl#n3#v" "3" "Cl#n3#v" "4" "Cl#n3#v"} :bonds [["0" "1" "1"] ["0" "2" "1"] ["0" "3" "1"] ["0" "4" "1"]] :charge -1 :spin "#u0 #s1"}}}
