umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_ho2-.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "O#c-#n3#v" "1" "O#n2#v2" "2" "H#v"} :bonds [["0" "1" "1"] ["1" "2" "1"]] :charge -1 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "O#c-#n3#v" "1" "O#n2#v2" "2" "H#v"} :bonds [["0" "1" "1"] ["1" "2" "1"]] :charge -1 :spin "#u0 #s1"}}}
